Major unfuck part 1

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,37 @@
-librosa>=0.5.1
-torch>=0.4
-tensorboardX>=1.2
-tqdm>=4.15.0
-numpy>=1.13.1
-scipy
-pandas
-requests
-scikit-image
+Cython==0.29.27
+audioread==2.1.8
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
+cycler==0.10.0
+decorator==4.4.2
+idna==2.9
+imageio==2.8.0
+joblib==0.14.1
+kiwisolver==1.2.0
+librosa==0.9.0
+llvmlite==0.38.0
+matplotlib==3.2.1
+networkx==2.4
+numba==0.55.1
+numpy==1.19.2
+pandas==1.4.1
+Pillow==9.0.1
+protobuf==3.11.3
+pycparser==2.20
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
+PyWavelets==1.1.1
+requests==2.23.0
+resampy==0.2.2
+scikit-image==0.19.1
+scikit-learn==0.22.2.post1
+scipy==1.8.0
+six==1.14.0
+SoundFile==0.10.3.post1
+tensorboardX==2.0
+torch==1.10.2
+tqdm==4.45.0
+urllib3==1.25.9
+mpi4py==3.1.3
